--- a/package.json
+++ b/package.json
@@ -27,17 +27,17 @@
     "slick-carousel": "^1.8.1",
     "web-vitals": "^1.0.1"
   },
+  "eslintconfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
