--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-modal-video": "^1.2.8",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.9",
     "react-scrollspy": "^3.4.3",
     "react-slick": "^0.28.1",
     "reactstrap": "^8.10.0",
